--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Барбершоп "Бородинский"</title>
+  <meta charset="UTF-8">
+  <title>Барбершоп «Бородинский»</title>
 </head>
 <body>
-    <header class="page-header">
-
-    </header>
+<header class="page-header">
+  <img class="page-header__logo-image" src="img/logo-mobile.svg"
+       width="226" height="30" alt="Барбершоп «Бородинский»">
+</header>
 
 </body>
 </html>
