--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 <header class="page-header">
-  <img class="page-header__logo-image" src="img/logo-mobile.svg"
-       width="226" height="30" alt="Барбершоп «Бородинский»">
+  <a class="page-header__logo" href="#">
+    <img class="page-header__logo-image" src="img/logo-mobile.svg"
+         width="226" height="30" alt="Барбершоп «Бородинский»">
+  </a>
 </header>
 
 </body>
