--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <img class="page-header__logo-image" src="img/logo-mobile.svg"
          width="226" height="30" alt="Барбершоп «Бородинский»">
   </a>
+  <nav class="main-nav">
+
+  </nav>
 </header>
 
 </body>
