--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
          width="226" height="30" alt="Барбершоп «Бородинский»">
   </a>
   <nav class="main-nav">
+    <ul class="main-nav__list site-list">
 
+    </ul>
   </nav>
 </header>
 
