--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
   </a>
   <nav class="main-nav">
     <ul class="main-nav__list site-list">
-
+      <li class="site-list__item">
+        <a href="index.html">Главная</a>
+      </li>
+      <li class="site-list__item">
+        <a href="photo.html">Наши работы</a></li>
+      <li class="site-list__item">
+        <a href="form.html">Записаться</a>
+      </li>
+      <li class="site-list__item">
+        <a href="#">Контакты</a>
+      </li>
+      <li class="site-list__item">
+        <a href="#">HTML Academy</a>
+      </li>
     </ul>
   </nav>
 </header>
