list item active

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </a>
   <nav class="main-nav">
     <ul class="main-nav__list site-list">
-      <li class="site-list__item">
+      <li class="site-list__item site-list__item--active">
         <a href="index.html">Главная</a>
       </li>
       <li class="site-list__item">
