--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <a href="#">HTML Academy</a>
       </li>
     </ul>
+    <ul class="main-nav__list user-list">
+
+    </ul>
   </nav>
 </header>
 
