--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       </li>
     </ul>
     <ul class="main-nav__list user-list">
-
+      <li class="user-list__item">
+        <a class="user-list__login" href="login.html">Войти</a>
+      </li>
     </ul>
   </nav>
 </header>
