--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
          width="226" height="30" alt="Барбершоп «Бородинский»">
   </a>
   <nav class="main-nav">
+    <button class="main-nav__toggle" type="button">
+      Открыть меню
+    </button>
     <ul class="main-nav__list site-list">
       <li class="site-list__item site-list__item--active">
         <a href="index.html">Главная</a>
