--- a/index.html
+++ b/index.html
@@ -14,27 +14,29 @@
     <button class="main-nav__toggle" type="button">
       Открыть меню
     </button>
-    <ul class="main-nav__list site-list">
-      <li class="site-list__item site-list__item--active">
-        <a href="index.html">Главная</a>
-      </li>
-      <li class="site-list__item">
-        <a href="photo.html">Наши работы</a></li>
-      <li class="site-list__item">
-        <a href="form.html">Записаться</a>
-      </li>
-      <li class="site-list__item">
-        <a href="#">Контакты</a>
-      </li>
-      <li class="site-list__item">
-        <a href="#">HTML Academy</a>
-      </li>
-    </ul>
-    <ul class="main-nav__list user-list">
-      <li class="user-list__item">
-        <a class="user-list__login" href="login.html">Войти</a>
-      </li>
-    </ul>
+    <div class="main-nav__wrapper">
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item site-list__item--active">
+          <a href="index.html">Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="photo.html">Наши работы</a></li>
+        <li class="site-list__item">
+          <a href="form.html">Записаться</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#">Контакты</a>
+        </li>
+        <li class="site-list__item">
+          <a href="#">HTML Academy</a>
+        </li>
+      </ul>
+      <ul class="main-nav__list user-list">
+        <li class="user-list__item">
+          <a class="user-list__login" href="login.html">Войти</a>
+        </li>
+      </ul>
+    </div>
   </nav>
 </header>
 
