--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </header>
 
 <main class="page-main">
-
+  <h1 class="visually-hidden">Барбершоп «Бородинский» – истинно мужская классика</h1>
 </main>
 
 </body>
