--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 <main class="page-main">
   <h1 class="visually-hidden">Барбершоп «Бородинский» – истинно мужская классика</h1>
 </main>
+  <section class="stats">
+    <header class="stats">
 
+    </header>
+  </section>
 </body>
 </html>
