--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <h1 class="visually-hidden">Барбершоп «Бородинский» – истинно мужская классика</h1>
 </main>
   <section class="stats">
-    <header class="stats">
+    <header class="stats__header">
 
     </header>
   </section>
