stats intro slogan

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
   <h1 class="visually-hidden">Барбершоп «Бородинский» – истинно мужская классика</h1>
   <section class="stats">
     <header class="stats__header">
-
+      <h2 class="visually-hidden">Статистика Барбершопа</h2>
+      <b class="stats__slogan">Стришка у нас это выгодно!</b>
+      <p class="stats__intro">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
     </header>
   </section>
 </main>
