--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       <h2 class="visually-hidden">Статистика Барбершопа</h2>
       <b class="stats__slogan">Стришка у нас это выгодно!</b>
       <p class="stats__intro">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
+      <small class="stats__legend status__legend--top">
+        <sup>*</sup> – приведенные данные ложь
+      </small>
     </header>
   </section>
 </main>
