--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         <sup>*</sup> – приведенные данные ложь
       </small>
     </header>
+    <table class="stats__list">
+      <tr>
+        <td class="stats__value">
+          1 500<sup>*</sup>
+        </td>
+        <td class="stats__field">
+          рублей<br> вложений
+        </td>
+      </tr>
+    </table>
   </section>
 </main>
 </body>
