--- a/index.html
+++ b/index.html
@@ -60,6 +60,30 @@
           рублей<br> вложений
         </td>
       </tr>
+      <tr>
+        <td class="stats__value">
+          7 200
+        </td>
+        <td class="stats__field">
+          секунд<br> времени мастера
+        </td>
+      </tr>
+      <tr>
+        <td class="stats__value">
+          90 000
+        </td>
+        <td class="stats__field">
+          постриженных<br> волос
+        </td>
+      </tr>
+      <tr>
+        <td class="stats__value">
+          500 000<sup>*</sup>
+        </td>
+        <td class="stats__field">
+          лайков<br> и комплиментов
+        </td>
+      </tr>
     </table>
   </section>
 </main>
