--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </table>
   </section>
   <section class="advantages">
-
+    <h2 class="visually-hidden">Наши преимущества</h2>
   </section>
 </main>
 </body>
