--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <section class="advantages">
     <h2 class="visually-hidden">Наши преимущества</h2>
     <ul class="advantages__list">
-      <li class="advantages__item">
+      <li class="advantages__item advantages__item--fast">
         <h3 class="advantages__title">Быстро</h3>
         <p class="advantages__description">Мы делаем совю работу быстро! Два часа пролетят незаметно и вы счастливый обладатель стильной стрижки-минутки.</p>
       </li>
