--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
         <h3 class="advantages__title">Быстро</h3>
         <p class="advantages__description">Мы делаем совю работу быстро! Два часа пролетят незаметно и вы счастливый обладатель стильной стрижки-минутки.</p>
       </li>
+      <li class="advantages__item advantages__item--cool">
+        <h3 class="advantages__title">Круто</h3>
+        <p class="advantages__description">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино. Во всяком случае внешне.</p>
+      </li>
+      <li class="advantages__item advantages__item--price">
+        <h3 class="advantages__title">Дорого</h3>
+        <p class="advantages__description">Наши мастера – профессионалы своего дела и не могут стоить дёшево. К тому же, разве цена не дает определенный статус?</p>
+      </li>
     </ul>
   </section>
 </main>
