--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
           <p class="advantages__description">Наши мастера – профессионалы своего дела и не могут стоить дёшево. К тому же, разве цена не дает определенный статус?</p>
         </li>
       </ul>
+      <p class="advantages__toggles slider__toggles">
+        <button class="slider__toggle" type="button">1</button>
+        <button class="slider__toggle" type="button">2</button>
+        <button class="slider__toggle" type="button">3</button>
+      </p>
     </div>
   </section>
 </main>
