--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
       </p>
     </div>
   </section>
+
+  <section class="news">
+    <h2 class="news__title">Новости и акции</h2>
+  </section>
 </main>
 </body>
 </html>
