--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
 
   <section class="news">
     <h2 class="news__title">Новости и акции</h2>
+    <ul class="news__list">
+      <li class="news__item">
+        
+      </li>
+    </ul>
   </section>
 </main>
 </body>
