--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         </time>
         <p class="news__text">Все дорожает, а наши стрижки нет! Как так? Приходите, постригитесь и узнаете, в чем здесь подвох!</p>
       </li>
+      <a href="#" class="news__to-all button">Показать все</a>
     </ul>
   </section>
 </main>
