--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
       </ul>
     </div>
   </section>
+  <section class="reviews">
+    <h2 class="reviews__title">Отзывы о нас</h2>
+  </section>
 </main>
 </body>
 </html>
