reviews list slider

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
   </section>
   <section class="reviews">
     <h2 class="reviews__title">Отзывы о нас</h2>
+    <div class="reviews__list slider__list">
+      
+    </div>
   </section>
 </main>
 </body>
