--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@
   <section class="reviews">
     <h2 class="reviews__title">Отзывы о нас</h2>
     <div class="reviews__list slider__list">
-      
+      <blockquote class="reviews__item slider__item">
+        <p class="reviews__author-picture">
+          <img class="reviews__author-image" src="img/picture-travis.jpg" alt="Фото Трэвиса Баркера">
+        </p>
+      </blockquote>
     </div>
   </section>
 </main>
