--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
         <p class="reviews__author-picture">
           <img class="reviews__author-image" src="img/picture-travis.jpg" alt="Фото Трэвиса Баркера">
         </p>
+        <cite class="reviews__author-name">Трэвис Баркер</cite>
+        <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
       </blockquote>
     </div>
   </section>
