--- a/index.html
+++ b/index.html
@@ -92,15 +92,18 @@
       <ul class="advantages__list slider__list">
         <li class="advantages__item advantages__item--fast slider__item">
           <h3 class="advantages__title">Быстро</h3>
-          <p class="advantages__description">Мы делаем совю работу быстро! Два часа пролетят незаметно и вы счастливый обладатель стильной стрижки-минутки.</p>
+          <p class="advantages__description">Мы делаем совю работу быстро! Два часа пролетят незаметно и вы счастливый
+            обладатель стильной стрижки-минутки.</p>
         </li>
         <li class="advantages__item advantages__item--cool slider__item">
           <h3 class="advantages__title">Круто</h3>
-          <p class="advantages__description">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино. Во всяком случае внешне.</p>
+          <p class="advantages__description">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или
+            кино. Во всяком случае внешне.</p>
         </li>
         <li class="advantages__item advantages__item--price slider__item">
           <h3 class="advantages__title">Дорого</h3>
-          <p class="advantages__description">Наши мастера – профессионалы своего дела и не могут стоить дёшево. К тому же, разве цена не дает определенный статус?</p>
+          <p class="advantages__description">Наши мастера – профессионалы своего дела и не могут стоить дёшево. К тому
+            же, разве цена не дает определенный статус?</p>
         </li>
       </ul>
       <p class="advantages__toggles slider__toggles">
@@ -148,7 +151,8 @@
           <img class="reviews__author-image" src="img/picture-travis.jpg" alt="Фото Трэвиса Баркера">
         </p>
         <cite class="reviews__author-name">Трэвис Баркер</cite>
-        <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+        <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую
+          татуировку!</p>
       </blockquote>
     </div>
   </section>
