--- a/index.html
+++ b/index.html
@@ -148,11 +148,27 @@
     <div class="reviews__list slider__list">
       <blockquote class="reviews__item slider__item">
         <p class="reviews__author-picture">
-          <img class="reviews__author-image" src="img/picture-travis.jpg" alt="Фото Трэвиса Баркера">
+          <img class="reviews__author-image" src="img/picture-travis.jpg" width="50" height="33"
+               alt="Фото Трэвиса Баркера">
         </p>
         <cite class="reviews__author-name">Трэвис Баркер</cite>
         <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую
           татуировку!</p>
+      </blockquote>
+      <blockquote class="reviews__item slider__item">
+        <p class="reviews__author-picture">
+          <img class="reviews__author-image" src="img/picture-jhon.jpg" width="50" height="33" alt="Фото Джона Смита">
+        </p>
+        <cite class="reviews__author-name">Джон Смит</cite>
+        <p class="reviews__text">Отличную стрижку мне сделали ребята.</p>
+      </blockquote>
+      <blockquote class="reviews__item slider__item">
+        <p class="reviews__author-picture">
+          <img class="reviews__author-image" src="img/picture-ivan.jpg" width="50" height="33"
+               alt="Фото Ивана Бородайло">
+        </p>
+        <cite class="reviews__author-name">Иван Бородайло</cite>
+        <p class="reviews__text">В Бородинском ваша борода в надёжных руках!</p>
       </blockquote>
     </div>
   </section>
