review slider toggles

--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
         <cite class="reviews__author-name">Иван Бородайло</cite>
         <p class="reviews__text">В Бородинском ваша борода в надёжных руках!</p>
       </blockquote>
+      <p class="review__toggles slider__toggles">
+        <button class="slider__toggle" type="button">1</button>
+        <button class="slider__toggle" type="button">2</button>
+        <button class="slider__toggle" type="button">3</button>
+      </p>
     </div>
   </section>
 </main>
