--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
   </section>
   <section class="reviews">
     <h2 class="reviews__title">Отзывы о нас</h2>
+    <a class="reviews__write button" href="#">Оставить свой</a>
     <div class="reviews__list slider__list">
       <blockquote class="reviews__item slider__item">
         <p class="reviews__author-picture">
@@ -170,12 +171,14 @@
         <cite class="reviews__author-name">Иван Бородайло</cite>
         <p class="reviews__text">В Бородинском ваша борода в надёжных руках!</p>
       </blockquote>
-      <p class="review__toggles slider__toggles">
-        <button class="slider__toggle" type="button">1</button>
-        <button class="slider__toggle" type="button">2</button>
-        <button class="slider__toggle" type="button">3</button>
-      </p>
+      <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+      <button class="reviews__next" type="button">Следующий отзыв</button>
     </div>
+    <p class="review__toggles slider__toggles">
+      <button class="slider__toggle" type="button">1</button>
+      <button class="slider__toggle" type="button">2</button>
+      <button class="slider__toggle" type="button">3</button>
+    </p>
   </section>
 </main>
 </body>
