--- a/index.html
+++ b/index.html
@@ -183,7 +183,15 @@
 </main>
 
 <footer class="page-footer">
-  
+  <div class="page-footer__contacts contacts">
+    <b class="contacts__title">Барбершоп «Бородинский»</b>
+    <p class="contacts__text">
+      г. Санкт-Петербург, ул. Большая Конюшенная 19/8<br>
+      <a href="tel:+78125556666" class="contacts__phone-mobile">
+        <span class="contacts__phone-mobile">Тел.:</span> +7 (812) 555-66-66
+      </a>
+    </p>
+  </div>
 </footer>
 </body>
 </html>
