--- a/index.html
+++ b/index.html
@@ -192,6 +192,13 @@
       </a>
     </p>
   </div>
+  <div class="page-footer__social social">
+    <ul class="social__list">
+      <li class="social__item">
+        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+      </li>
+    </ul>
+  </div>
 </footer>
 </body>
 </html>
