--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
       </li>
     </ul>
   </div>
+  <div class="page-footer__copyright copyright">
+    <b class="copyright__text">Разработано:</b>
+    <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+  </div>
 </footer>
 </body>
 </html>
