--- a/index.html
+++ b/index.html
@@ -183,31 +183,34 @@
 </main>
 
 <footer class="page-footer">
-  <div class="page-footer__contacts contacts">
-    <b class="contacts__title">Барбершоп «Бородинский»</b>
-    <p class="contacts__text">
-      г. Санкт-Петербург, ул. Большая Конюшенная 19/8<br>
-      <a href="tel:+78125556666" class="contacts__phone-mobile">
-        <span class="contacts__phone-mobile">Тел.:</span> +7 (812) 555-66-66
-      </a>
-    </p>
-  </div>
-  <div class="page-footer__social social">
-    <ul class="social__list">
-      <li class="social__item">
-        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-      </li>
-    </ul>
-  </div>
-  <div class="page-footer__copyright copyright">
-    <b class="copyright__text">Разработано:</b>
-    <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+  <div class="page-footer__wrapper">
+    <div class="page-footer__contacts contacts">
+      <b class="contacts__title">Барбершоп «Бородинский»</b>
+      <p class="contacts__text">
+        г. Санкт-Петербург, ул. Большая Конюшенная 19/8<br>
+        <a href="tel:+78125556666" class="contacts__phone-mobile">
+          <span class="contacts__phone-mobile">Тел.:</span> +7 (812) 555-66-66
+        </a>
+      </p>
+    </div>
+    <div class="page-footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в
+            Инстаграме</a>
+        </li>
+      </ul>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <b class="copyright__text">Разработано:</b>
+      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+    </div>
   </div>
 </footer>
 </body>
