--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
          alt="Барбершоп «Бородинский»">
   </a>
   <nav class="main-nav">
+  <nav class="main-nav main-nav--closed">
     <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     <div class="main-nav__wrapper">
       <ul class="main-nav__list site-list">
