--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="226" height="30"
              alt="Барбершоп «Бородинский»">
     </a>
-    <nav class="main-nav main-nav--closed">
+    <nav class="main-nav main-nav--opened">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
