--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="226" height="30"
              alt="Барбершоп «Бородинский»">
     </a>
-    <nav class="main-nav main-nav--opened main-nav--nojs">
+    <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
@@ -235,5 +235,20 @@
   </div>
 </footer>
 
+<script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.main-nav__toggle');
+
+    navMain.classList.remove('main-nav--nojs');
+    navToggle.addEventListener('click', function () {
+        if (navMain.classList.contains('main-nav--closed')) {
+            navMain.classList.remove('main-nav--closed');
+            navMain.classList.add('main-nav--opened');
+        } else {
+            navMain.classList.add('main-nav--closed');
+            navMain.classList.remove('main-nav--opened');
+        }
+    });
+</script>
 </body>
 </html>
