--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
   <section class="stats">
     <header class="stats__header">
-      <h2 class="visually-hidden">Статистика Барбершопа</h2>
-      <b class="stats__slogan">Стрижка у нас это выгодно!</b>
+      <h2 class="stats__title visually-hidden">Статистика Барбершопа</h2>
+      <b class="stats__slogan">Стрижка у нас<br> это выгодно!</b>
       <p class="stats__intro">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
       <small class="stats__legend stats__legend--top">
         <sup>*</sup> — приведённые данные ложь
@@ -94,7 +94,7 @@
           500 000<sup>*</sup>
         </td>
         <td class="stats__field">
-          лайков<br> и комплиментов
+          лайков и<br> комплиментов
         </td>
       </tr>
     </table>
