--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section class="stats">
     <header class="stats__header">
       <h2 class="stats__title visually-hidden">Статистика Барбершопа</h2>
-      <b class="stats__slogan">Стрижка у нас<br> это выгодно!</b>
+      <b class="stats__slogan">Стрижка у нас<br> это&nbsp;выгодно!</b>
       <p class="stats__intro">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
       <small class="stats__legend stats__legend--top">
         <sup>*</sup> — приведённые данные ложь
