--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
 <header class="page-header">
   <a class="page-header__logo">
-    <img class="page-header__logo-image" src="img/logo-mobile.svg" width="226" height="30"
-         alt="Барбершоп «Бородинский»">
+    <picture>
+      <img class="page-header__logo-image" src="img/logo-mobile.svg" width="226" height="30"
+           alt="Барбершоп «Бородинский»">
+    </picture>
   </a>
   <nav class="main-nav main-nav--closed main-nav--nojs">
     <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
