--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <header class="page-header">
   <a class="page-header__logo">
     <picture>
+      <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
+      <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
       <img class="page-header__logo-image" src="img/logo-mobile.svg" width="226" height="30"
            alt="Барбершоп «Бородинский»">
     </picture>
