--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="advantages__wrapper slider">
       <h2 class="visually-hidden">Наши преимущества</h2>
       <ul class="advantages__list slider__list">
-        <li class="advantages__item advantages__item--fast slider__item">
+        <li class="advantages__item advantages__item--fast slider__item slider__item--active">
           <h3 class="advantages__title">Быстро</h3>
           <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый
             обладатель стильной стрижки-минутки.</p>
