--- a/index.html
+++ b/index.html
@@ -170,10 +170,14 @@
       <h2 class="reviews__title">Отзывы о нас</h2>
       <a class="reviews__write button" href="#">Оставить свой</a>
       <div class="reviews__list  slider__list">
-        <blockquote class="reviews__item  slider__item">
+        <blockquote class="reviews__item  slider__item slider__item--active">
           <p class="reviews__author-picture">
-            <img class="reviews__author-image" src="img/picture-travis.jpg" width="50" height="33"
-                 alt="Фото Трэвиса Баркера">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/picture-travis-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="img/travis-tablet.png">
+              <img class="reviews__author-image" src="/img/travis-mobile.png"
+                   alt="Фото Трэвиса Баркера">
+            </picture>
           </p>
           <cite class="reviews__author-name">Трэвис Баркер</cite>
           <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую
